# coriolis-pdk-gf180mcu

./: .gitmodules  README.rst  build-LIP6.sh  meson.build  pyproject.toml
libs.tech/coriolis/gf180mcu/: __init__.py  iolib.py  mcu9t5v0.py  techno.py
libs.tech/coriolis/gf180mcu/core2chip/: gf180mcu.py
libs.tech/coriolis/gf180mcu/designflow/: drc.py
